# advent_of_coders

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
ben/: .env  .gitignore
ben/2019/: README.md
ben/2020/: README.md
ben/2021/: README.md
ben/2022/: README.md  __init__.py
ben/2023/: README.md
ben/2024/: README.md
ben/aoc/: __init__.py  create.py  io.py  pathfinding.py  register.py  run.py  template_py.py  template_readme_day.md  utils.py
blovio/: .gitconfig  .gitignore  README.md
blovio/2022/: day1.lua  day2.lua  day3.lua  day4.lua
chandler/: Cargo.toml  README.md
chandler/2022/: Cargo.toml  Justfile
chandler/2022/src/: main.rs
chandler/2022/src/day1/: main.rs
chandler/2022/src/day2/: main.rs
hayden/: README.md
hayden/2015/: README.md
hayden/2022/: README.md
hayden/2023/: Readme.md
hayden/2024/: go.mod  readme.md
hayden/d2/: e1.py
hayden/d3/: e1.py  e2.py
hayden/d4/: e1.py
hayden/d5/: e1.py  e2.py
jack/: .gitignore  README.md
jack/2015/: __debug_bin3385240925  day01.go  day02.go  day03.go  day04.go  day05.go  day06.go  day07.go  day08.go  day09.go  go.mod  main.go  performance_test.go
jack/2016/: go.mod
jack/2021/: Day1.js  Day10.js  Day11.js  Day12.js  Day13.js  Day13Vis.html  Day14.js  Day2.js  Day3.js  Day4.js  Day5.js  Day6Again.js  (+8 more)
josh/: README.md
justin/: package-lock.json  tsconfig.json
michael/: README.md
phil/: day10.py  day11.py  day14.py  day15.py  day17.py  day18.py  day19.py  day3.py  day4.py  day6.py  day7.py  day8.py
teddy/: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
(+493 files in other folders)
